--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,16 @@
-<<<<<<< HEAD
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
   font-family: 'Saira', Inter, Avenir, Helvetica, Arial, sans-serif;
-=======
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
->>>>>>> 50ac1cc2700c82381b1f897617fb7de7e44f073d
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-<<<<<<< HEAD
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424; */
-=======
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
->>>>>>> 50ac1cc2700c82381b1f897617fb7de7e44f073d
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,65 +18,15 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-<<<<<<< HEAD
-/* 
-=======
 
->>>>>>> 50ac1cc2700c82381b1f897617fb7de7e44f073d
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@layer base {
+  .section {
+    @apply py-[50px] lg:py-[70px];
   }
-  a:hover {
-    color: #747bff;
+  .title {
+    @apply text-2xl lg:text-[40px] leading-tight font-semibold mb-4;
   }
-  button {
-    background-color: #f9f9f9;
+  .subtitle {
+    @apply text-[18px] lg:text-[20px] leading-relaxed mb-5 lg:mb-9;
   }
-<<<<<<< HEAD
-} */
-=======
 }
->>>>>>> 50ac1cc2700c82381b1f897617fb7de7e44f073d
